force-app/main/default/objects/CCX_Client_Partner__c/CCX_Client_Partner__c.object-meta.xml
<CustomObject>
    <label>CCX Client Partner</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>CCX Client Partner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX Client Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>