force-app/main/default/objects/CCX_Client_Partner__c/fields/CCX_CP_Address__c.field-meta.xml
<CustomField>
    <fullName>CCX_CP_Address__c</fullName>
    <label>CCX CP Address</label>
    <type>TextArea</type>
</CustomField>