force-app/main/default/objects/CCX_Client_Partner__c/fields/CCX_CP_Details__c.field-meta.xml
<CustomField>
    <fullName>CCX_CP_Details__c</fullName>
    <label>CCX CP Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>