force-app/main/default/objects/CCX_Client_Partner__c/fields/CCX_CP_Name__c.field-meta.xml
<CustomField>
    <fullName>CCX_CP_Name__c</fullName>
    <label>CCX CP Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>